Fix katex equation overflow style.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -106,6 +106,10 @@ blockquote {
 .math-display {
   overflow-x: auto;
 }
+.katex-display {
+  padding: 1rem;
+  overflow: scroll;
+}
 :root[data-theme="light"] {
   --invert-value: 0%;
   --img-brightness: 100%;
